--- a/404.html
+++ b/404.html
@@ -1,2 +1,4 @@
 <!DOCTYPE html>
-<img src="https://http.cat/404"></img>
+<body style="background: #000000">
+<img src="https://http.cat/404">
+</body>
